Sat Jun 18 12:42:17 2011  Tanaka Akira  <akr@fsij.org>

	* method.h, internal.h iseq.h: declare internal functions.

	* compile.c, eval.c, iseq.c, object.c, parse.y, proc.c, process.c,
	  thread.c, vm.c, vm_eval.c, vm_insnhelper.c, vm_method.c: don't
	  declare internal functions.

	  Note that rb_method_entry_eq() is defined in vm_method.c but
	  there was a declaration in proc.c with different const-ness.
	  Now it is declared in method.h with same const-ness to the
	  definition.

	* object.c (rb_mod_module_exec): don't declare functions declared in
	  include/ruby/intern.h.
	  
Sat Jun 18 12:05:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/classext.h: for evil gems.  fixed #4803

Sat Jun 18 11:12:13 2011  Tanaka Akira  <akr@fsij.org>

	* common.mk: update dependencies.

Sat Jun 18 11:09:03 2011  Tanaka Akira  <akr@fsij.org>

	* io.c: supress warnings.

Sat Jun 18 10:22:39 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare more internal functions.

	* iseq.h (rb_method_get_iseq): declared.

	* compile.c, eval.c, eval_error.c, iseq.c, parse.y, proc.c, range.c,
	  ruby.c, time.c, util.c, vm.c: don't declare internal functions.

	* eval.c, parse.y, thread_pthread.c: non-existing function declarations
	  removed.

Sat Jun 18 08:12:54 2011  Tanaka Akira  <akr@fsij.org>

	* common.mk: dependencies updated.

	* tool/update-deps: new file to assist update dependencies in
	  common.mk.

Sat Jun 18 07:27:27 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare internal functions here.

	* node.h: declare NODE dependent internal functions here.

	* iseq.h: declare rb_iseq_t dependent internal functions here.

	* vm_core.h: declare rb_thread_t dependent internal functions here.

	* bignum.c, class.c, compile.c, complex.c, cont.c, dir.c, encoding.c,
	  enumerator.c, error.c, eval.c, file.c, gc.c, hash.c, inits.c, io.c,
	  iseq.c, load.c, marshal.c, math.c, numeric.c, object.c, parse.y,