@@ -1,3 +1,7 @@
+Sat Jun 18 13:39:33 2011  Tanaka Akira  <akr@fsij.org>
+
+	* internal.h: declarations declared in include/ruby/*.h removed.
+
 Sat Jun 18 12:42:17 2011  Tanaka Akira  <akr@fsij.org>
 
 	* method.h, internal.h iseq.h: declare internal functions.
